fix: change font-family naming and overflow

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 a {
   text-decoration: none;
   color: #402928;
-  font-family: "Hoss Round", sans-serif;
+  font-family: hoss-round, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
@@ -21,7 +21,7 @@ h1 {
 
 h2 {
   color: #402928;
-  font-family: "Hoss Round", sans-serif;
+  font-family: hoss-round, sans-serif;
   font-size: 35px;
   font-style: normal;
   font-weight: 500;
@@ -30,7 +30,7 @@ h2 {
 
 h3 {
   color: #402928;
-  font-family: "Hoss Round", sans-serif;
+  font-family: hoss-round, sans-serif;
   font-size: 25px;
   font-style: normal;
   font-weight: 500;
@@ -39,7 +39,7 @@ h3 {
 
 h4 {
   color: #402928;
-  font-family: "Acumin Pro", sans-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -48,7 +48,7 @@ h4 {
 
 h5 {
   color: #402928;
-  font-family: "Hoss Round", sans-serif;
+  font-family: hoss-round, sans-serif;
   font-size: 15px;
   font-style: normal;
   font-weight: 500;
@@ -57,7 +57,7 @@ h5 {
 
 p {
   color: #402928;
-  font-family: "Acumin Pro", sans-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -67,7 +67,7 @@ p {
 button {
   color: #e9e7db;
   text-align: center;
-  font-family: "Acumin Pro", sans-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
@@ -76,7 +76,7 @@ button {
 
 .footer-title {
   color: #e9e7db;
-  font-family: "Hoss Round", sans-serif;
+  font-family: hoss-round, sans-serif;
   font-size: 35px;
   font-style: normal;
   font-weight: 500;
@@ -85,7 +85,7 @@ button {
 
 footer ul {
   color: #e9e7db;
-  font-family: "Acumin Pro", sans-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
@@ -94,7 +94,7 @@ footer ul {
 
 small {
   color: #e9e7db;
-  font-family: "Acumin Pro", sans-serif;
+  font-family: acumin-pro, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
@@ -153,7 +153,7 @@ small {
   a {
     text-decoration: none;
     color: #402928;
-    font-family: "Hoss Round";
+    font-family: hoss-round, sans-serif;
     font-size: 20px;
     font-style: normal;
     font-weight: 500;
@@ -166,7 +166,7 @@ small {
   a {
     text-decoration: none;
     color: #402928;
-    font-family: "Hoss Round";
+    font-family: hoss-round, sans-serif;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -231,12 +231,16 @@ body {
   padding-right: 5rem;
   padding-bottom: 5rem;
   display: grid;
-  flex-direction: column;
+  grid-template-columns: 1fr;
   gap: 1rem;
   align-content: start;
-  overflow-y: auto;
+  overflow: auto;
   max-width: 80rem;
-  overflow: hidden;
+  scroll-behavior: unset;
+}
+
+.details > * {
+  min-width: 0;
 }
 
 .add-to-cart-button {
@@ -442,7 +446,7 @@ small {
 @media screen and (max-width: 867px) {
   .footer-title {
     color: #e9e7db;
-    font-family: "Hoss Round";
+    font-family: hoss-round, sans-serif;
     font-size: 25px;
     font-style: normal;
     font-weight: 500;
@@ -451,7 +455,7 @@ small {
 
   footer ul {
     color: #e9e7db;
-    font-family: "Acumin Pro";
+    font-family: acumin-pro, sans-serif;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -460,7 +464,7 @@ small {
 
   small {
     color: #e9e7db;
-    font-family: "Acumin Pro";
+    font-family: acumin-pro, sans-serif;
     font-size: 15px;
     font-style: normal;
     font-weight: 500;
@@ -498,13 +502,13 @@ small {
     padding-right: 3rem;
   }
 
-.mail {
-  background: url(../img/icons/white_mail_icon.svg);
-  background-repeat: no-repeat;
-  display: flex;
-  width: 15px;
-  height: 15px;
-  box-sizing: border-box;
-  padding-right: 3rem;
-}
+  .mail {
+    background: url(../img/icons/white_mail_icon.svg);
+    background-repeat: no-repeat;
+    display: flex;
+    width: 15px;
+    height: 15px;
+    box-sizing: border-box;
+    padding-right: 3rem;
+  }
 }
